# thrift-binary-serialization-optimization

./: CMakeLists.txt  README.md  TBinaryProtocol.h  benchmark.thrift  test_binary_protocol.cpp
test/: test_binary_protocol.cpp
